go/k8s/network/ingress/ingress-controller/k8s-simple-ingress-controller.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: k8s-simple-ingress-controller
  labels:
    app: k8s-simple-ingress-controller
spec:
  selector:
    matchLabels:
      app: k8s-simple-ingress-controller
  template:
    metadata:
      labels:
        app: k8s-simple-ingress-controller
    spec:
      serviceAccountName: k8s-simple-ingress-controller
      containers:
        - name: k8s-simple-ingress-controller
          image: lx1036/k8s-simple-ingress-controller
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
            - containerPort: 443
              protocol: TCP
              name: https
---
